tests/invalid-syntax/61015_type_error/type_error.agu
-- Author: 61015, Filipe Lopes

let a : Int = "hello";  